--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -2,7 +2,7 @@ APP_NAME="RWT APP"
 APP_ENV=local
 APP_KEY=base64:8eeQzGqLMPhXJ7QHZ0X9SjEehf0zQDfza+snKvKVQqY=
 APP_DEBUG=true
-APP_URL=http://localhost:9000
+APP_URL=http://localhost:7000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=none
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=ecommerce
-# DB_USERNAME=root
-# DB_PASSWORD=@toor@
+DB_CONNECTION=mysql
+DB_HOST=database
+DB_PORT=3306
+DB_DATABASE=rwt
+DB_USERNAME=root
+DB_PASSWORD=root
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -77,4 +77,6 @@ VITE_APP_NAME="${APP_NAME}"
 # VITE_REVERB_SCHEME="${REVERB_SCHEME}"
 
 VITE_APP_ENV=development
-VITE_API_BASE_URL=http://13.236.177.86/api/
+# VITE_API_BASE_URL=http://13.236.177.86/api/
+# VITE_API_BASE_URL=http://192.168.1.83:7000/api/
+VITE_API_BASE_URL=https://appointments-metal-named-revolutionary.trycloudflare.com/api/
