adds ui's: login,register,verify otp and fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
   "search.exclude": {
     "**/node_modules": true,
     "**/dist": true
+  },
+  "files.exclude": {
+    "**/laravel/.pnpm-store": true
   }
 }
