--- a/laravel/package.json
+++ b/laravel/package.json
@@ -56,6 +56,7 @@
         "cmdk": "^1.1.1",
         "concurrently": "^9.0.1",
         "globals": "^15.14.0",
+        "input-otp": "^1.4.2",
         "laravel-vite-plugin": "^2.0",
         "lucide-react": "^0.475.0",
         "next-themes": "^0.4.6",
